# rust_armbot

./: Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
libs/ledc_servo/: Cargo.toml  README.md
libs/ledc_servo/src/: lib.rs
rust-armbot/: Cargo.toml
rust-armbot/src/: armbot.rs  error.rs  gamepad.rs  main.rs  util.rs
src/: armbot.rs  gamepad.rs  ledc_servo.rs  main.rs
