[workspace]
members = [
    "rust-armbot",
    "libs/ledc_servo",
]
resolver = "2"

[workspace.dependencies]
log = { version = "0.4", default-features = false }
esp-idf-hal = { version = "0.45", default-features = false, features = ["std"] }
esp-idf-sys = { version = "0.36" }
esp-idf-svc = { version = "0.51.0", default-features = false, features = ["std"] }
eyre = "0.6"
embuild = "0.33.1"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"
