[workspace]
members = [
    "rust-armbot",
]
resolver = "2"

[workspace.dependencies]
esp-hal = {version = "1", default-features = false , features = ["esp32c3", "rt"]}
esp-hal-servo = "0.3"

log = { version = "0.4", default-features = false }

riscv-rt = "0.16"
esp-println = { version = "0.16", default-features = false, features = ["uart", "esp32c3"] }
esp-backtrace = { version = "0.18", default-features = false, features = ["panic-handler", "defmt", "esp32c3"] }
esp-bootloader-esp-idf = { version = "0.4", features = ["esp32c3"] }
nb = "1.1"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"
