[package]
name = "rust-armbot"
version = "0.1.0"
authors = ["C.Solovev <constantine.solovev@gmail.com>"]
edition = "2021"

[dependencies]
log.workspace = true
esp-idf-svc.workspace = true
eyre.workspace = true
ledc_servo = { path = "../libs/ledc_servo" }

[build-dependencies]
embuild.workspace = true
