[package]
name = "rust-armbot"
version = "0.1.0"
authors = ["C.Solovev <constantine.solovev@gmail.com>"]
edition = "2021"

[dependencies]
esp-hal = { workspace = true, features = ["defmt"] }
esp-hal-servo.workspace = true

riscv-rt.workspace = true
esp-println.workspace = true
nb.workspace = true
esp-backtrace.workspace = true
esp-bootloader-esp-idf.workspace = true

log.workspace = true
